# Agents-Finance

./: langchain_compound_analysis.py  langchain_stock_compare.py  requirements.txt
faizagent/: README.md  pyproject.toml  report.md
faizagent/src/faizagent/: crew.py  main.py
faizagent/src/faizagent/config/: agents.yaml  tasks.yaml
faizagent/src/faizagent/tools/: custom_tool.py
finansagent/: README.md  pyproject.toml
finansagent/src/finansagent/: crew.py  main.py
finansagent/src/finansagent/config/: agents.yaml  tasks.yaml
finansagent/src/finansagent/tools/: custom_tool.py
