[project]
name = "faizagent"
version = "0.1.0"
description = "faizagent using crewAI"
authors = [{ name = "Atakan AK", email = "atakanak48@gmail.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0"
]

[project.scripts]
faizagent = "faizagent.main:run"
run_crew = "faizagent.main:run"
train = "faizagent.main:train"
replay = "faizagent.main:replay"
test = "faizagent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
