[project]
name = "finansagent"
version = "0.1.0"
description = "finansagent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0",
    "yfinance>=0.2.51",
]

[project.scripts]
finansagent = "finansagent.main:run"
run_crew = "finansagent.main:run"
train = "finansagent.main:train"
replay = "finansagent.main:replay"
test = "finansagent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
